tests/errors/len_invalid_type.orus
let num: i32 = 5
print(len(num))
